apps/agora-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showcase
spec:
  selector:
    app: showcase
  ports:
    - name: http
      port: 80
      targetPort: http
