apps/agora-test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: showcase
spec:
  parentRefs:
    - name: bretagne-gateway
      namespace: traefik
      sectionName: https-agora-test
  hostnames:
    - agora-test.bretagne.dev
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: "max-age=86400; includeSubDomains"
      backendRefs:
        - name: showcase
          port: 80
